# sl0

./: README.md  TODO.md
example/chain/dynamic/: CMakeLists.txt  flow.h  main.cpp
example/chain/manager/: main.cpp
example/chain/static/: main.cpp
example/ellipsoid/: CMakeLists.txt  flow.h  main.cpp
example/group/chain/: main.cpp
example/group/dynamic/: CMakeLists.txt  main.cpp
example/group/static/: CMakeLists.txt  main.cpp
example/point/: flow.h  main.cpp
example/point_inertial/: CMakeLists.txt  main.cpp
example/spheroid/: flow.h  main.cpp
include/sl0/: _ellipsoid.h  _memory.h  axis.h  basis.h  ellipsoid.h  manager.h  object.h  point.h  point_inertial.h  point_inertial_kinematic.h  point_inertial_kinematic_filtered.h  spheroid.h  surface_element.h  zermelo.h
include/sl0/chain/: dynamic.h  manager.h  static.h
include/sl0/group/: _chain.h  _dynamic_chain.h  _static.h  chain.h  dynamic.h  static.h
test/shear/: CMakeLists.txt  main.cpp
